--- a/tesi.tex
+++ b/tesi.tex
@@ -9,6 +9,7 @@
 \definecolor{lightgray}{rgb}{.9,.9,.9}
 \definecolor{darkgray}{rgb}{.4,.4,.4}
 \definecolor{purple}{rgb}{0.65, 0.12, 0.82}
+%\graphicspath{ {/Users/andreaolivari/Dropbox/tesi/latex/img/} }
 
 \lstdefinelanguage{javascript}{
   keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
@@ -42,7 +43,7 @@
 }
 
 
-\title{\textbf{Security Analysis of MQTT and ZigBee}}
+\title{\textbf{Security analysis of protocols used in IoT solutions}}
 \author{Andrea Olivari}
 \date{\today}
 
