--- a/tesi.tex
+++ b/tesi.tex
@@ -55,7 +55,75 @@
 
 \chapter{Introduction to IoT}
 \bigskip
-da fare...
+Internet of Things (IoT) is a neologism, introduced by Kevin Ashton in 1999, which has become popular in recent years due to
+growing interest from companies and because nowadays it is possible to produce small devices with a reasonable computational power;
+these small devices are embedded into bigger objects in order to improve them by making them, in some way, smart.\\
+
+Iot has a variety of different applications: ranging from everyday things like watches that measures how many kilometers we have walked during the day, to smart homes that control the air conditioning system based on temperature and pollution in the air, or even smart cities where semaphores adjust their times based on the traffic condition.\\
+But these are only three examples, IoT extends also to other fields like: health care, industrial monitoring, self driving cars and agriculture.\\
+
+The IoT is also changing the way software is developed, in order to produce a good IoT system companies are brought to cooperate with each other,
+moving from a one-company-does-it-all perspective to a let’s-work-together approach\cite{successiot}, this means that proprietary systems 
+are no more a good choice and companies should embrace open systems in order to cooperate in a better way.\\
+
+From the financial point of view, IoT seems like a very profitable market, it is esteemed that the global IoT market will grow to \$457B by 2020\cite{forbes}, by assuming this forecast as real, it means that lots of devices will be deployed in the network, but exposing a device
+or an host on the Internet also means exposing it to possible threats.\\
+An interesting case of insecure IoT system is given by a luxury hotel in Austria \cite{whydoiot}, the electronic key system was attacked
+by hackers that were able to lock out (or in, it depends) guests by their rooms, until they paid a ransom; the system lacked a fundamental security
+component in order to avoid intrusion.\\
+Long story short: after the attack, the hotel reverted to physical keys.\\
+By this real case scenario we can imagine other problematic situations that does not imply an attack, for instance: if a blackout occurs, a guest is still able to access	his well paid room?\\
+What if the content of the electronic key is not encrypted and it is possible to change its content in order to access other guests' room?\\
+This event should also make us think if we really need an IoT system for every aspects of our life, an electronic keys system is
+surely comfortable, you can configure the electronic key as you want in few seconds, on the other hand is quite easy to overwrite the content
+of an electronic key, while it is a bit more difficult to craft the copy of a physical key (if you are not a professional burglar), because you first need to steal it and duplicate it.\\
+Another interesting and funny case of insecure devices is provided by CloudPets\cite{toys} a company that produces toys, and in particular: Internet-connected fluffy animals toys,
+these toys were able to connect via Bluetooth to a smartphone's app in order to download and upload audio messages; it is possible to access the voice recordings without any authentication if you known the exact URL at which they were stored.\\
+The Guardian states that "The personal information of more than half a million people who bought Internet-connected fluffy animals has been compromised", it does not sounds like a good advertisement
+when the personal informations are: username, password, profile pictures and voice recordings.\\
+\textbf{Note:} the passwords were cracked easily because they were extremely easy to guess ("password", "123456", "qwerty", "qwerty123456" and so on).\\
+
+Another interesting thing to highlight is that "The personal information was contained in a database connected directly to the Internet, with no usernames or passwords preventing any visitor from accessing all the data", this could means that the entire application was developed without any security requirements or security knowledge.\\
+ 
+The security aspect of an IoT application is not related only to external attack by criminals but it also extend to reliability; think about a power plant monitored by
+an IoT system, if it is not well designed and for some reason it does not take the proper counter measures to an overload, a blackout can occur and the consequences are bad, mostly on the financial point of view.\\
+These are the reasons why I am interested in analyzing the security aspect of IoT applications, considering that in near future
+IoT could be integral part of our life I think it is crucial to develop secure system in order to avoid problems.
+
+
+\section{Structure of an IoT application}
+\bigskip
+Most of times an IoT system is a large scale application that put in place different protocols, hardware and software.\newline
+From the point of view of the protocols there are lots of choices, such as: \emph{HTTP}, \emph{MQTT}, \emph{WebSocket}, \emph{ZigBee}, \emph{CoAP}, etc; each of them has its own advantages and disadvantages, so it is crucial to choose the most proper one that fits well your business logic; also take in mind that some protocols like MQTT or CoAP are used in sensors-server communication, while HTTP and WebSocket
+are used for client-server communications.\\
+
+While dealing with IoT we can bump into different types of hardware: from the constrained device with low computational power to high performance cluster machines; basically the dirty work is taken over by lots of low power devices which communicate with the server,
+that will elaborate this data or forward it to the cloud in order to elaborate them in a faster way.\newline
+Talking about software, instead, we can work with a variety of programming languages: from a low level \emph{Assembly} to high level languages like \emph{C\#} or \emph{JavaScript}.\\
+
+The development of an IoT system firstly requires a deep knowledge of the different parts of an application, hence the developement team should be formed by experts with different skills and specializations.\newline
+This little overview should help us to understand how difficult could be to design and develop an IoT application; the figure below illustrates the schema of a possible architecture of an IoT application.\\
+
+\begin{figure}[H]
+\includegraphics[width=13cm,height=12cm,keepaspectratio]{iotapp_architecture}
+\caption{Possible structure of an IoT application}
+\end{figure}
+
+\bigskip
+\section{Requirements of an IoT system}
+\bigskip
+In IoT systems it is common to deal with a lot of high data rate communication involving constrained devices, having limited (sometimes extremely limited) power.\\
+For this reason, we need some standard providing low-latency with low-energy consumption even at lower bandwidths.\\
+
+More in details, these are the requirements for a network composed by a relevant number of constrained devices:
+
+\begin{itemize}
+\setlength{\itemindent}{+4mm}
+\item[$\bullet$] be able to scale to larger sizes and operate for a long time (years, in some scenarios) without manual intervention
+\item[$\bullet$] long battery life for devices
+\item[$\bullet$] granting a good quality of reliable services
+\item[$\bullet$] low complexity and low cost communication
+\end{itemize}
 
 
 \part{MQTT}
@@ -1098,23 +1166,6 @@ So, the moral of this brief story is that it is fundamental to consider every se
 
 \section{Introduction}
 \bigskip
-
-\iffalse
-We have already seen in the MQTT part that nowdays there are a lot of high data rate communication involving very constrained devices.\\
-For this reason, we need some standard providing low-latency with low-energy consumption even at lower bandwidths.\\
-
-More in details, these are the requirements for a network full of constrained devices:
-
-\begin{itemize}
-\setlength{\itemindent}{+4mm}
-\item[$\bullet$] be able to scale to larger sizes and operate for years without manual intervention
-\item[$\bullet$] extremely long battery life for devices
-\item[$\bullet$] granting a good quality of services
-\item[$\bullet$] low complexity and low cost communication
-\end{itemize}
-\fi
-
-In the previous part we have discussed MQTT, which is very different from ZigBee, in the way it works and the real world usages.\\
 
 ZigBee is a low-cost emerging protocol deployed by ZigBee Alliance, for controlling and monitoring applications, covering 10-100 meters within the range. \\
 This communication system is less expensive and simpler than Bluetooth and Wi-Fi and its range can be extended using routers, as we will see in a minute.\\
