--- a/tesiref.bib
+++ b/tesiref.bib
@@ -19,6 +19,20 @@
 
 # per MQTT
 
+@misc{cirruslink,
+	title="https://www.cirrus-link.com/",
+	howpublished="\url{https://www.cirrus-link.com/}"}
+
+@misc{ibm,
+	title="https://www.ibm.com/",
+	howpublished="\url{https://www.ibm.com/}"
+}
+
+@misc{shodan,
+	title="{https://www.shodan.io/}",
+	howpublished="\url{https://www.shodan.io/}"
+}
+
 @misc{mqttslideshare,
 	title="Message queuing telemetry transport(mqtt) and part and summarizing",
 	author="Khamdamboy Urunov",
@@ -45,6 +59,20 @@
 	year={2017},
 	howpublished="\url{https://morphuslabs.com/hacking-the-iot-with-mqtt-8edaf0d07b9b}"
 }
+
+@misc{sslvulns,
+	title="https://www.digicert.com/cert-inspector-vulnerabilities.htm#certificate_vulnerabilities",
+	howpublished="\url{https://www.digicert.com/cert-inspector-vulnerabilities.htm#certificate_vulnerabilities}"
+}
+
+@misc{mitmwiki,
+	title="https://en.wikipedia.org/wiki/Man-in-the-middle_attack",
+	howpublished="\url{https://en.wikipedia.org/wiki/Man-in-the-middle_attack}"
+}
+
+@misc{oauthwiki,
+	title="https://en.wikipedia.org/wiki/OAuth",
+	howpublished="\url{https://en.wikipedia.org/wiki/OAuth}"}
 
 @misc{mqttonlywithsdp,
 	title="Is MQTT Secure for the IoT? Only with an SDP!",
