--- a/tesiref.bib
+++ b/tesiref.bib
@@ -3,6 +3,10 @@
 
 # per introduzione
 
+@misc{kevinashton,
+	title="https://en.wikipedia.org/wiki/Kevin_Ashton",
+	howpublished="\url{https://en.wikipedia.org/wiki/Kevin_Ashton}"}
+
 @misc{toys,
 	title={CloudPets stuffed toys leak details of half a million users },
 	author={Alex Hern},
