--- a/tesiref.bib
+++ b/tesiref.bib
@@ -1,11 +1,9 @@
 \begin{thebibliography}{}
 
-
-# per introduzione
-
 @misc{kevinashton,
-	title="https://en.wikipedia.org/wiki/Kevin_Ashton",
-	howpublished="\url{https://en.wikipedia.org/wiki/Kevin_Ashton}"}
+	title="https://en.wikipedia.org/wiki/Kevin_Ashton/",
+	howpublished="\url{https://en.wikipedia.org/wiki/KevinAshton/}"
+}
 
 @misc{toys,
 	title={CloudPets stuffed toys leak details of half a million users },
@@ -20,8 +18,6 @@
 	year={2017},
 	howpublished="\url{https://www.forbes.com/sites/louiscolumbus/2017/12/10/2017-roundup-of-internet-of-things-forecasts/#5866d27d1480}"
 }
-
-# per MQTT
 
 @misc{cirruslink,
 	title="https://www.cirrus-link.com/",
@@ -76,7 +72,13 @@
 
 @misc{oauthwiki,
 	title="https://en.wikipedia.org/wiki/OAuth",
-	howpublished="\url{https://en.wikipedia.org/wiki/OAuth}"}
+	howpublished="\url{https://en.wikipedia.org/wiki/OAuth}"
+}
+
+@misc{ocspwiki,
+	title="https://en.wikipedia.org/wiki/Online_Certificate_Status_Protocol",
+	howpublished="https://en.wikipedia.org/wiki/Online_Certificate_Status_Protocol"
+}
 
 @misc{mqttonlywithsdp,
 	title="Is MQTT Secure for the IoT? Only with an SDP!",
@@ -105,8 +107,6 @@
 	year={2018},
 	howpublished="\url{https://www.01net.it/proteggere-rete-software-defined-perimeter/}"
 }
-
-# per ZigBee
 
 @misc{zigbeewirelesstechnology,
 	title="ZigBee Wireless Technology Architecture and Applications",
