--- a/tesiref.bib
+++ b/tesiref.bib
@@ -119,6 +119,11 @@
 	year={2017}
 }
 
+@misc{onewaycompressionfunc,
+	title="https://en.wikipedia.org/wiki/One-way_compression_function",
+	howpublished="\url{https://en.wikipedia.org/wiki/One-way_compression_function}"
+}
+
 @misc{security802154,
 	title="Security in 802.15.4 and ZigBee networks",
 	author="David Gascón",
@@ -131,12 +136,26 @@
 	howpublished="\url{https://en.wikipedia.org/wiki/CCM_mode}"	
 }
 
-@misc{zigbeesecbasics,
+@misc{zigbeesecbasics2,
+	title="Zigbee Security: Basics",
+	author="Vishruta Rudresh",
+	year={2017},
+	howpublished="\url{https://research.kudelskisecurity.com/2017/11/21/zigbee-security-basics-part-2/}"
+}
+
+@misc{zigbeesecbasics3,
 	title="Zigbee Security: Basics",
 	author="Vishruta Rudresh",
 	year={2017},
 	howpublished="\url{https://research.kudelskisecurity.com/2017/11/21/zigbee-security-basics-part-3/}"
 }
 
+@misc{zigbeespec,
+	title="ZigBee Specification",
+	howpublished="\url{http://www.zigbee.org/wp-content/uploads/2014/11/docs-05-3474-20-0csg-zigbee-specification.pdf}"}
+
+@misc{digi,
+	title="https://www.digi.com/resources/documentation/Digidocs/90002002/Content/Reference/r_zb_stack.htm",
+	howpublished="\url{https://www.digi.com/resources/documentation/Digidocs/90002002/Content/Reference/r_zb_stack.htm}"}
 
 \end{thebibliography}
